<resources>
    <!-- Використані стрічки у програмі -->
    <string name="app_name">Lab2</string>
    <string name="info">Довідка</string>
    <string name="objects">Об\'єкти</string>
    <string name="point">Крапка</string>
    <string name="line">Лінія</string>
    <string name="rectangle">Прямокутник</string>
    <string name="ellipse">Еліпс</string>
    <string name="info_dialog_title">Довідка</string>
    <string name="info_dialog_message">
        Цей додаток є реалізацією лабораторної роботи №2 з ООП
    </string>
    <string name="info_dialog_button">Закрити</string>
    <string name="file">Файл</string>
    <string name="erase">Стерти</string>
    <string name="nothing_chosen">"Не обрано"</string>
</resources>