<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/chosen"
        android:title="@string/nothing_chosen"
        app:showAsAction="always" />
    <item
        android:id="@+id/objects"
        android:title="@string/objects"
        app:showAsAction="always" >
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/point"
                    android:title="@string/point" />
                <item
                    android:id="@+id/line"
                    android:title="@string/line" />
                <item
                    android:id="@+id/rectangle"
                    android:title="@string/rectangle" />
                <item
                    android:id="@+id/ellipse"
                    android:title="@string/ellipse" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/erase"
        android:icon="@drawable/eraser"
        android:title="@string/erase"
        app:showAsAction="always" />
    <item
        android:id="@+id/file"
        android:title="@string/file" />
    <item
        android:id="@+id/info"
        android:title="@string/info" />
</menu>